[package]
name = "lux-tauri"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "lux_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
lux = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tokio = { version = "1.44", features = ["process", "sync"] }
toml = "0.8"

[build-dependencies]
tauri-build = { version = "2", features = [] }
